--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 5.1.0+9
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -45,7 +45,7 @@ dependencies:
   audioplayers: ^6.0.0
   flutter_downloader: ^1.4.4
   file_picker: ^8.0.5
-  open_file: ^3.0.0
+  #open_file: ^3.0.0
   firebase_storage: ^12.0.1
   flutter_cache_manager: ^3.0.0
   bubble: ^1.1.9+1
